--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ img {
 /*===========================*/
 /*Navs & tabs*/
 .tab-pane {
-    max-height: 350px;
+    height: 350px;
     overflow-y: auto;
 }
 
